--- a/mk-Veiculos/index.html
+++ b/mk-Veiculos/index.html
@@ -96,8 +96,8 @@
       <div class="container">
         <div class="row justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
           <div class="col-xl-6 col-lg-8">
-            <h2>MK Veículos<span>.</span></h2>
-            <p>Na Mk, você encontra procedência e qualidade.</p>
+            <h2>MK Veículos</h2>
+            <p>Na Mk, você encontra procedência e qualidade</p>
           </div>
         </div>
 
